# openface-android-sample

./: .gitignore  .gitignore~
OpenFaceDemo/: local.properties
OpenFaceDemo/app/: CMakeLists.txt  build.gradle
OpenFaceDemo/app/src/main/: AndroidManifest.xml
OpenFaceDemo/app/src/main/cpp/: native-lib.cpp
OpenFaceDemo/app/src/main/java/com/example/openface/openfacedemo/: MainActivity.java
OpenFaceDemo/app/src/main/java/org/utils/: LoadConfigurationsTask.java
OpenFaceDemo/app/src/main/res/layout/: activity_main.xml
Openface_reduced/lib/local/LandmarkDetector/include/: LandmarkDetectorModel.h
Openface_reduced/lib/local/LandmarkDetector/src/: LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp
ios/CaptureAndRender/: MainWireframe-Prefix.pch  OOAppDelegate.h  OOAppDelegate.mm  OOAutoRotableButton.h  OOAutoRotableButton.m  OOAutoRotableView.h  OOAutoRotableView.m  main.m
ios/CaptureAndRender/Base.lproj/: Main_iPad.storyboard  Main_iPhone.storyboard
ios/CaptureAndRender/CPP_bridge/: OONativeSingleton.h
ios/CaptureAndRender/CameraCapture/: OOCameraController.h
ios/CaptureAndRender/Controllers/: OOMainViewController.h  OOMainViewController.mm  OOViewController.h  OOViewController.mm
ios/CaptureAndRender/Images.xcassets/AppIcon.appiconset/: Contents.json
ios/CaptureAndRender/Interaction/: OOInteractionController.h  OOInteractionController.mm
ios/CaptureAndRender/NativeCode/: NativeCode.cpp  NativeCode.cpp~
ios/CaptureAndRender/OpenGLLayer/: OpenGLES2DView.h  OpenGLES2DView.mm
ios/CaptureAndRender/Utils/: UIDeviceHardware.h  UIDeviceHardware.m
ios/CaptureAndRenderSample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
